[package]
name = "teleprost"
version = "0.0.1"
edition = "2021"
description = "Convert between Protocol Buffers based models and detached models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moia-oss/teleprost"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies] 
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits"] }
